--- a/.github/workflows/runcode.yaml
+++ b/.github/workflows/runcode.yaml
@@ -4,8 +4,8 @@ onCreate:
   - virtualenv -p python3 ../venv
   - |
         . ../venv/bin/activate
-        pip install -upgrade pip
-        pip install flask
+        pip install -u pip
+        pip install -
 onStart:
   - |
         . ../venv/bin/activate
